# stylus

./: .gitignore  main.py  pyproject.toml  stylus.stl  stylus_gen.py
stylus/: __main__.py  generator.py
