[project]
name = "stylus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manifold3d>=3.4.0",
    "scipy>=1.12.0",
    "trimesh>=4.11.4",
]

[project.scripts]
stylus = "stylus.generator:main"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
